--- a/deb/openmediavault-route/debian/changelog
+++ b/deb/openmediavault-route/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-route (0.5.4) stable; urgency=low
+
+  * Update locales.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 19 May 2014 19:13:42 +0200
+
 openmediavault-route (0.5.3) stable; urgency=low
 
   * Update locales.
