--- a/deb/openmediavault-clamav/usr/share/openmediavault/locale/ja_JP/openmediavault-clamav.po
+++ b/deb/openmediavault-clamav/usr/share/openmediavault/locale/ja_JP/openmediavault-clamav.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# kansuke <kansuke4649@gmail.com>, 2014
+# Toshihiro Kan <kansuke4649@gmail.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-29 17:56+0100\n"
-"PO-Revision-Date: 2014-01-31 12:00+0000\n"
-"Last-Translator: kansuke <kansuke4649@gmail.com>\n"
+"PO-Revision-Date: 2014-02-16 03:09+0000\n"
+"Last-Translator: Toshihiro Kan <kansuke4649@gmail.com>\n"
 "Language-Team: Japanese (Japan) (http://www.transifex.com/projects/p/openmediavault/language/ja_JP/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -45,7 +45,7 @@ msgid "Database mirror"
 msgstr "データベースミラー"
 
 msgid "Date & Time"
-msgstr "日付 & 時間"
+msgstr "日付 & 時刻"
 
 msgid "Day of month"
 msgstr "月の日"
