--- a/deb/openmediavault-netatalk/debian/changelog
+++ b/deb/openmediavault-netatalk/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-netatalk (0.5.7) stable; urgency=low
+
+  * Update locales.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 19 May 2014 19:12:26 +0200
+
 openmediavault-netatalk (0.5.6.1) stable; urgency=low
 
   * Mantis 0001008: Apple Filing Service Discovery need to be restarted
