--- a/deb/openmediavault-nut/debian/changelog
+++ b/deb/openmediavault-nut/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-nut (0.5.10) stable; urgency=low
+
+  * Update locales.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 19 May 2014 19:12:52 +0200
+
 openmediavault-nut (0.5.9) stable; urgency=low
 
   * Modify postinst to be compatible to rsyslog backport package.
