--- a/deb/openmediavault-owncloud/debian/changelog
+++ b/deb/openmediavault-owncloud/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-owncloud (0.5.8) stable; urgency=low
+
+  * Update locales.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 19 May 2014 19:13:16 +0200
+
 openmediavault-owncloud (0.5.7) stable; urgency=low
 
   * Update locales.
