--- a/deb/openmediavault-owncloud/usr/share/openmediavault/locale/gl_ES/openmediavault-owncloud.po
+++ b/deb/openmediavault-owncloud/usr/share/openmediavault/locale/gl_ES/openmediavault-owncloud.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-12-18 19:52+0100\n"
-"PO-Revision-Date: 2013-12-18 18:52+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2014-01-30 06:58+0000\n"
+"Last-Translator: mbouzada <mbouzada@gmail.com>\n"
 "Language-Team: Galician (Spain) (http://www.transifex.com/projects/p/openmediavault/language/gl_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,46 +18,46 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "Add share"
-msgstr ""
+msgstr "Engadir un recurso a compartir"
 
 msgid "Comment"
-msgstr ""
+msgstr "Comentario"
 
 msgid "Data directory"
-msgstr ""
+msgstr "Directorio de datos"
 
 msgid "Edit share"
-msgstr ""
+msgstr "Editar a compartición"
 
 msgid "Enable"
-msgstr ""
+msgstr "Activar"
 
 msgid "Folder name"
-msgstr ""
+msgstr "Nome do cartafol"
 
 msgid "General settings"
-msgstr ""
+msgstr "Axustes xerais"
 
 msgid "Settings"
-msgstr ""
+msgstr "Axustes"
 
 msgid "Shared folder"
-msgstr ""
+msgstr "Cartafol compartido"
 
 msgid "Shares"
-msgstr ""
+msgstr "Comparticións"
 
 msgid "The location of the files to share."
-msgstr ""
+msgstr "A localización dos ficheiros que compartir."
 
 msgid "The location where ownCloud stores its files."
-msgstr ""
+msgstr "O lugar onde ownCloud almacena os ficheiros."
 
 msgid "The name of the share."
-msgstr ""
+msgstr "O nome do recurso compartido"
 
 msgid "n/a"
-msgstr ""
+msgstr "n/d"
 
 msgid "ownCloud"
-msgstr ""
+msgstr "ownCloud"
