--- a/deb/openmediavault-owncloud/usr/share/openmediavault/locale/ja_JP/openmediavault-owncloud.po
+++ b/deb/openmediavault-owncloud/usr/share/openmediavault/locale/ja_JP/openmediavault-owncloud.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-12-18 19:52+0100\n"
-"PO-Revision-Date: 2014-01-23 17:56+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2014-01-24 01:07+0000\n"
+"Last-Translator: Toshihiro Kan <kansuke4649@gmail.com>\n"
 "Language-Team: Japanese (Japan) (http://www.transifex.com/projects/p/openmediavault/language/ja_JP/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,46 +18,46 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0;\n"
 
 msgid "Add share"
-msgstr ""
+msgstr "共有の追加"
 
 msgid "Comment"
-msgstr ""
+msgstr "コメント"
 
 msgid "Data directory"
-msgstr ""
+msgstr "データディレクトリ"
 
 msgid "Edit share"
-msgstr ""
+msgstr "共有の編集"
 
 msgid "Enable"
-msgstr ""
+msgstr "有効"
 
 msgid "Folder name"
-msgstr ""
+msgstr "フォルダ名"
 
 msgid "General settings"
-msgstr ""
+msgstr "一般設定"
 
 msgid "Settings"
-msgstr ""
+msgstr "設定"
 
 msgid "Shared folder"
-msgstr ""
+msgstr "共有フォルダ"
 
 msgid "Shares"
-msgstr ""
+msgstr "共有"
 
 msgid "The location of the files to share."
-msgstr ""
+msgstr "共有するファイルの場所。"
 
 msgid "The location where ownCloud stores its files."
-msgstr ""
+msgstr "ownCloudがファイルを保存する場所。"
 
 msgid "The name of the share."
-msgstr ""
+msgstr "共有の名前"
 
 msgid "n/a"
-msgstr ""
+msgstr "n/a"
 
 msgid "ownCloud"
-msgstr ""
+msgstr "ownCloud"
