--- a/deb/openmediavault-owncloud/usr/share/openmediavault/locale/zh_CN/openmediavault-owncloud.po
+++ b/deb/openmediavault-owncloud/usr/share/openmediavault/locale/zh_CN/openmediavault-owncloud.po
@@ -3,13 +3,13 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# dezi121 <by@songming.me>, 2013
+# dezi121 <by@songming.me>, 2013-2014
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-12-18 19:52+0100\n"
-"PO-Revision-Date: 2013-12-21 13:54+0000\n"
+"PO-Revision-Date: 2014-05-11 02:49+0000\n"
 "Last-Translator: dezi121 <by@songming.me>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/projects/p/openmediavault/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
@@ -52,13 +52,13 @@ msgid "The location of the files to share."
 msgstr "要共享的本地文件夹位置。"
 
 msgid "The location where ownCloud stores its files."
-msgstr "ownCloud 存储文件的位置。"
+msgstr "ownCloud存储文件的位置。"
 
 msgid "The name of the share."
 msgstr "共享名。"
 
 msgid "n/a"
-msgstr "N/A"
+msgstr "n/a"
 
 msgid "ownCloud"
 msgstr "ownCloud"
