--- a/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/da_DA/openmediavault-usbbackup.po
+++ b/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/da_DA/openmediavault-usbbackup.po
@@ -3,13 +3,13 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Stefan Thrane Overby <stoverby@gmail.com>, 2013
+# Stefan Thrane Overby <stoverby@gmail.com>, 2013-2014
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-06-16 13:13+0200\n"
-"PO-Revision-Date: 2013-06-17 10:19+0000\n"
+"PO-Revision-Date: 2014-04-08 17:47+0000\n"
 "Last-Translator: Stefan Thrane Overby <stoverby@gmail.com>\n"
 "Language-Team: Danish (http://www.transifex.com/projects/p/openmediavault/language/da/)\n"
 "MIME-Version: 1.0\n"
@@ -60,7 +60,7 @@ msgid "Enable"
 msgstr "Aktiver"
 
 msgid "Enable archive mode."
-msgstr "Aktiver arkiv modus."
+msgstr "Aktiver arkiv tilstand"
 
 msgid ""
 "Enable this option to keep partially transferred files, otherwise they will "
@@ -95,7 +95,7 @@ msgid "Keep partially transferred files"
 msgstr "Behold delvis overførte filer"
 
 msgid "Mode"
-msgstr "Mode"
+msgstr "Tilstand"
 
 msgid ""
 "Please check the <a href='http://www.samba.org/ftp/rsync/rsync.html' "
