--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (0.5.49) stable; urgency=low
+
+  * Fix default ACL issue.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 27 May 2014 18:27:44 +0200
+
 openmediavault (0.5.48) stable; urgency=low
 
   * Update locales.
