--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (0.5.52) stable; urgency=low
+
+  * Improve release upgrade script.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 01 Jul 2014 21:55:17 +0200
+
 openmediavault (0.5.51) stable; urgency=low
 
   * Improve release upgrade script.
