--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (0.5.53) stable; urgency=low
+
+  * Improve release upgrade script.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 15 Jul 2014 12:07:14 +0200
+
 openmediavault (0.5.52) stable; urgency=low
 
   * Improve release upgrade script.
