--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,11 @@
+openmediavault (0.5.54) stable; urgency=low
+
+  * Check whether a directory is still used as mount point before
+    unlinking. This is done to prevent data loss when the device or
+    resource is busy.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 03 Aug 2014 23:50:03 +0200
+
 openmediavault (0.5.53) stable; urgency=low
 
   * Improve release upgrade script.
