--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (0.5.57) stable; urgency=low
+
+  * Modify help text in omv-release-upgrade script.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 07 Sep 2014 09:42:01 +0200
+
 openmediavault (0.5.56) stable; urgency=low
 
   * Improve pre upgrade scripts.
