--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -2,6 +2,7 @@ openmediavault (0.5.58) stable; urgency=low
 
   * Improve upgrade script. The nut and ldap plugins must be deinstalled
     before upgrade, otherwise the installation fails.
+  * Improve upgrade script. Fix issue when upgrading from squeeze-lts.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sun, 14 Sep 2014 19:42:06 +0200
 
