--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (0.5.59) stable; urgency=low
+
+  * Fix bug in omv-update command.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 15 Sep 2014 21:15:00 +0200
+
 openmediavault (0.5.58) stable; urgency=low
 
   * Improve upgrade script. The nut, ldap  and iscsitarget plugins must be
