Add ability to filter the plugin list.

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -2,6 +2,7 @@ openmediavault (1.12) stable; urgency=low
 
   * Update the smartmontools drive database once a week.
   * Don't be too restrictive in RPC Network::enumerateDevicesList().
+  * Add ability to filter the plugin list.
   * Mantis 0001254: Error with as0t0 device created for OpenVPN Access Server.
   * Mantis 0001255: Can't set user quota on XFS filesystem.
 
