--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault (1.12) stable; urgency=low
 
+  * Update locales.
   * Update the smartmontools drive database once a week.
   * Don't be too restrictive in RPC Network::enumerateDevicesList().
   * Add ability to filter the plugin list.
