--- a/deb/openmediavault/usr/share/openmediavault/locale/pt_PT/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/pt_PT/openmediavault.po
@@ -3,15 +3,15 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Nelson Rosado <nelsontrosado@gmail.com>, 2012-2014
+# Nelson Rosado <nelsontrosado@gmail.com>, 2012-2015
 # Nelson Rosado <nelsontrosado@gmail.com>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-01-06 14:50+0100\n"
-"PO-Revision-Date: 2015-01-06 13:50+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-01-29 19:59+0000\n"
+"Last-Translator: Nelson Rosado <nelsontrosado@gmail.com>\n"
 "Language-Team: Portuguese (Portugal) (http://www.transifex.com/projects/p/openmediavault/language/pt_PT/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -380,7 +380,7 @@ msgid "Asynchronous I/O"
 msgstr "Assíncrono I/O"
 
 msgid "At reboot"
-msgstr ""
+msgstr "Ao reiniciar"
 
 msgid "Attribute name"
 msgstr "Nome do atributo"
@@ -556,12 +556,12 @@ msgstr "Cancelar"
 msgid ""
 "Cannot unlink the shared folder content because another shared folder also "
 "refers to it"
-msgstr ""
+msgstr "Não é possível desvincular o conteúdo da pasta partilhada, porque outra pasta partilhada está a referenciar um subdiretório"
 
 msgid ""
 "Cannot unlink the shared folder content because another shared folder is "
 "referencing a subdirectory"
-msgstr ""
+msgstr "Não é possível desvincular o conteúdo da pasta partilhada, porque outra pasta partilhada está a referenciar um subdiretório"
 
 msgid "Canton and Enderbury Islands"
 msgstr "Canton and Enderbury Islands"
