--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault (1.13) stable; urgency=low
+
+  * Display a info message in the TFTP service page to make sure that the
+    shared folder is publicly writable if new files are allowed.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 03 Feb 2015 18:27:05 +0100
+
 openmediavault (1.12) stable; urgency=low
 
   * Update locales.
