Various improvements is the WebGUI. Reintroduce Ext.form.field.ComboBox.prototype.setValue because the generic ExtJS implementation does not work for some scenarious. See Rsyncd modules dialog for example.

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault (1.13) stable; urgency=low
 
+  * Various improvements is the WebGUI.
   * Display a info message in the TFTP service page to make sure that the
     shared folder is publicly writable if new files are allowed.
 
