--- a/deb/shairport/debian/changelog
+++ b/deb/shairport/debian/changelog
@@ -1,3 +1,9 @@
+shairport (1.1.1-23-gd65b8e8) stable; urgency=low
+
+  * New upstream version.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 18 Feb 2015 19:09:50 +0100
+
 shairport (1.1.1-1) stable; urgency=low
 
   * Improve init script. Set password command line option if set.
