--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -4,6 +4,7 @@ openmediavault (1.13) stable; urgency=low
   * Display a info message in the TFTP service page to make sure that the
     shared folder is publicly writable if new files are allowed.
   * Mantis 0001133: File contains invalid JSON.
+  * Mantis 0001266: 40interfaces error on omv-initsystem.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 03 Feb 2015 18:27:05 +0100
 
