--- a/deb/openmediavault/usr/share/openmediavault/locale/it_IT/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/it_IT/openmediavault.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-01-06 14:50+0100\n"
-"PO-Revision-Date: 2015-01-06 13:59+0000\n"
+"PO-Revision-Date: 2015-02-03 14:34+0000\n"
 "Last-Translator: Paolo Velati <paolo.velati@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/projects/p/openmediavault/language/it/)\n"
 "MIME-Version: 1.0\n"
@@ -560,12 +560,12 @@ msgstr "Annulla"
 msgid ""
 "Cannot unlink the shared folder content because another shared folder also "
 "refers to it"
-msgstr ""
+msgstr "Impossibile scollegare il contenuto della cartella condivisa perché un'altra cartella condivisa è collegata ad una sotto cartella"
 
 msgid ""
 "Cannot unlink the shared folder content because another shared folder is "
 "referencing a subdirectory"
-msgstr ""
+msgstr "Impossibile scollegare il contenuto della cartella condivisa perché un'altra cartella condivisa è collegata ad una sotto cartella"
 
 msgid "Canton and Enderbury Islands"
 msgstr "Isole Canton ed Enderbury"
@@ -777,7 +777,7 @@ msgid "Daemon"
 msgstr "Demone"
 
 msgid "Daily"
-msgstr ""
+msgstr "Giornaliero"
 
 msgid "Dashboard"
 msgstr "Cruscotto"
@@ -1206,7 +1206,7 @@ msgid "Everyone: read/write"
 msgstr "Tutti: lettura/scrittura"
 
 msgid "Exactly"
-msgstr ""
+msgstr "Esattamente"
 
 msgid "Execute command"
 msgstr "Esegui comando"
@@ -1500,7 +1500,7 @@ msgid "Hour"
 msgstr "Ora"
 
 msgid "Hourly"
-msgstr ""
+msgstr "Orario"
 
 msgid "Hungary"
 msgstr "Ungheria"
@@ -2041,7 +2041,7 @@ msgid "Month"
 msgstr "Mese"
 
 msgid "Monthly"
-msgstr ""
+msgstr "Mensilmente"
 
 msgid "Montserrat"
 msgstr "Montserrat"
@@ -2800,7 +2800,7 @@ msgid "Seconds"
 msgstr "Secondi"
 
 msgid "Section"
-msgstr ""
+msgstr "Sezione"
 
 msgid "Secure"
 msgstr "Sicuro"
@@ -3590,7 +3590,7 @@ msgid "Time interval"
 msgstr "Intervallo di tempo"
 
 msgid "Time of execution"
-msgstr ""
+msgstr "Tempo di esecuzione"
 
 msgid "Time server"
 msgstr "Time server"
@@ -3884,7 +3884,7 @@ msgid "Wednesday"
 msgstr "Mercoledì"
 
 msgid "Weekly"
-msgstr ""
+msgstr "Settimanale"
 
 msgid "Welcome message"
 msgstr "Messaggio di benvenuto"
@@ -3922,7 +3922,7 @@ msgid "Write/Execute"
 msgstr "Scrittura/Esecuzione"
 
 msgid "Yearly"
-msgstr ""
+msgstr "Annuale"
 
 msgid "Yemen"
 msgstr "Yemen"
