--- a/deb/openmediavault/usr/share/openmediavault/locale/ko_KR/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/ko_KR/openmediavault.po
@@ -4,15 +4,15 @@
 # 
 # Translators:
 # Chang-Eon Byeon <ksna0827@gmail.com>, 2014-2015
-# Ji-Hyeon Gim <potatogim@potatogim.net>, 2014
+# Ji-Hyeon Gim <potatogim@potatogim.net>, 2014-2015
 # Volker <votdev@gmx.de>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-01-06 14:50+0100\n"
-"PO-Revision-Date: 2015-01-06 14:17+0000\n"
-"Last-Translator: Chang-Eon Byeon <ksna0827@gmail.com>\n"
+"PO-Revision-Date: 2015-02-09 04:20+0000\n"
+"Last-Translator: Ji-Hyeon Gim <potatogim@potatogim.net>\n"
 "Language-Team: Korean (Korea) (http://www.transifex.com/projects/p/openmediavault/language/ko_KR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -580,7 +580,7 @@ msgid "Central African Republic"
 msgstr "중앙 아프리카 공화국"
 
 msgid "Certain date"
-msgstr ""
+msgstr "유효 기간"
 
 msgid "Certificate"
 msgstr "인증"
@@ -1203,7 +1203,7 @@ msgid "Everyone: read/write"
 msgstr "모두: 읽기/쓰기"
 
 msgid "Exactly"
-msgstr ""
+msgstr "완전히 일치"
 
 msgid "Execute command"
 msgstr "명령 실행"
@@ -1806,7 +1806,7 @@ msgid "Loading ..."
 msgstr "로딩 중 ..."
 
 msgid "Loading, please wait ..."
-msgstr "로딩 중입니다, 잠시만 기다려주십시오 ..."
+msgstr "로딩 중입니다, 잠시만 기다려주세요 ..."
 
 msgid "Local"
 msgstr "로컬"
@@ -1918,7 +1918,7 @@ msgid "Max. connections per host"
 msgstr "호스트 당 최대 연결"
 
 msgid "Max. login attempts"
-msgstr "최대 로그인 시도"
+msgstr "최대 로그인 시도 횟수"
 
 msgid "Maximum download rate (KiB/s)"
 msgstr "최대 내려받기 속도 (KiB/s)"
@@ -2236,10 +2236,10 @@ msgid "Others"
 msgstr "기타"
 
 msgid "Outgoing"
-msgstr "발신"
+msgstr "송신"
 
 msgid "Outgoing SMTP mail server address, e.g. smtp.mycorp.com."
-msgstr "발신 SMTP 메일 서버 주소. 예를 들어, smtp.mycorp.com."
+msgstr "송신 SMTP 메일 서버 주소. 예를 들어, smtp.mycorp.com."
 
 msgid "Outlying Oceania"
 msgstr "오세아니아 외곽"
@@ -2320,7 +2320,7 @@ msgid "Permissions of owner."
 msgstr "소유자 권한"
 
 msgid "Permit root login"
-msgstr "루트 로그인 허용"
+msgstr "루트 로그인을 허용합니다."
 
 msgid "Permit to do SSH tunneling"
 msgstr "SSH 터널링을 허용합니다."
@@ -2563,7 +2563,7 @@ msgid "Read/Write/Execute"
 msgstr "읽기/쓰기/실행"
 
 msgid "Real"
-msgstr ""
+msgstr "실제"
 
 msgid "Reboot"
 msgstr "재시작"
@@ -2797,7 +2797,7 @@ msgid "Seconds"
 msgstr "초"
 
 msgid "Section"
-msgstr ""
+msgstr "섹션"
 
 msgid "Secure"
 msgstr "보안"
@@ -2857,7 +2857,7 @@ msgid "Select or enter a user name ..."
 msgstr "사용자 이름을 선택 또는 입력하세요 ..."
 
 msgid "Self-test logs"
-msgstr "자가-검사 기록"
+msgstr "자가진단 기록"
 
 msgid "Send a test email"
 msgstr "전자우편 보내기 시험"
@@ -2869,7 +2869,7 @@ msgid "Send email"
 msgstr "전자우편 전송"
 
 msgid "Sender email"
-msgstr "발신자 전자우편 주소"
+msgstr "송신자 전자우편 주소"
 
 msgid "Sending test email ..."
 msgstr "시험용 전자우편을 전송 중입니다 ..."
@@ -3088,10 +3088,10 @@ msgid ""
 msgstr "링크 복구를 감지했을 때 슬레이브 장치를 활성화하기 전 대기할 시간을 밀리초 단위로 지정합니다"
 
 msgid "Specifies whether it is allowed to login as superuser directly"
-msgstr "슈퍼유저로 직접 로그인 허용 여부를 지정합니다."
+msgstr "슈퍼유저로 로그인이 가능하게 할 것인지 지정합니다."
 
 msgid "Specifies whether it is allowed to login as superuser."
-msgstr "수퍼유저로 로그인 허용 여부를 지정합니다."
+msgstr "수퍼유저로 로그인이 가능하게 할 것인지 지정합니다."
 
 msgid ""
 "Specifies whether to monitor the system status and select the most "
@@ -3368,7 +3368,7 @@ msgstr "파일 시스템 볼륨 레이블"
 msgid ""
 "The welcome message which will be displayed to the user when they initially "
 "login."
-msgstr "환영 메시지는 사용자가 처음 로그인할 때 표시될 것입니다."
+msgstr "이 환영 메시지는 사용자의 초기 로그인 시점에 나타납니다."
 
 msgid "The workgroup the server will appear to be in when queried by clients."
 msgstr "클라이언트가 조회할 때 작업 그룹의 서버가 나타날 것입니다."
@@ -3602,7 +3602,7 @@ msgid "Timeout"
 msgstr "만료"
 
 msgid "Times"
-msgstr ""
+msgstr "시간"
 
 msgid "Togo"
 msgstr "토고"
