--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (1.14) stable; urgency=low
+
+  * Fix various ExtJS issues.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 25 Feb 2015 13:18:23 +0100
+
 openmediavault (1.13) stable; urgency=low
 
   * Update locales.
