--- a/deb/openmediavault/usr/share/openmediavault/locale/cs_CZ/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/cs_CZ/openmediavault.po
@@ -3,15 +3,15 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Jan Štourač <wormsik666@gmail.com>, 2014
+# Jan Štourač <wormsik666@gmail.com>, 2014-2015
 # Pavel Borecki <pavel.borecki@gmail.com>, 2014-2015
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-01-06 14:50+0100\n"
-"PO-Revision-Date: 2015-02-05 19:57+0000\n"
-"Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
+"PO-Revision-Date: 2015-03-01 13:54+0000\n"
+"Last-Translator: Jan Štourač <wormsik666@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/projects/p/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -380,7 +380,7 @@ msgid "Asynchronous I/O"
 msgstr "Asynchronní vstup/výstup"
 
 msgid "At reboot"
-msgstr ""
+msgstr "Při restartu"
 
 msgid "Attribute name"
 msgstr "Název atributu"
@@ -773,7 +773,7 @@ msgid "Daemon"
 msgstr "Služba"
 
 msgid "Daily"
-msgstr ""
+msgstr "Denně"
 
 msgid "Dashboard"
 msgstr "Přehled"
@@ -1202,7 +1202,7 @@ msgid "Everyone: read/write"
 msgstr "Kdokoliv: čtení/zápis"
 
 msgid "Exactly"
-msgstr ""
+msgstr "Přesně"
 
 msgid "Execute command"
 msgstr "Spustit příkaz"
@@ -1496,7 +1496,7 @@ msgid "Hour"
 msgstr "Hodina"
 
 msgid "Hourly"
-msgstr ""
+msgstr "Každou hodinu"
 
 msgid "Hungary"
 msgstr "Maďarsko"
@@ -2037,7 +2037,7 @@ msgid "Month"
 msgstr "Měsíc"
 
 msgid "Monthly"
-msgstr ""
+msgstr "Měsíčně"
 
 msgid "Montserrat"
 msgstr "Montserrat"
@@ -2796,7 +2796,7 @@ msgid "Seconds"
 msgstr "Sekundy"
 
 msgid "Section"
-msgstr ""
+msgstr "Sekce"
 
 msgid "Secure"
 msgstr "Bezpečné"
@@ -3880,7 +3880,7 @@ msgid "Wednesday"
 msgstr "Středa"
 
 msgid "Weekly"
-msgstr ""
+msgstr "Týdně"
 
 msgid "Welcome message"
 msgstr "Uvítací zpráva"
@@ -3918,7 +3918,7 @@ msgid "Write/Execute"
 msgstr "Zápis/spouštění"
 
 msgid "Yearly"
-msgstr ""
+msgstr "Každoročně"
 
 msgid "Yemen"
 msgstr "Jemen"
