--- a/deb/openmediavault/usr/share/openmediavault/locale/gl/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/gl/openmediavault.po
@@ -5,14 +5,14 @@
 # Translators:
 # Miguel Anxo Bouzada <mbouzada@gmail.com>, 2013-2014
 # Miguel Anxo Bouzada <mbouzada@gmail.com>, 2013
-# Miguel Anxo Bouzada <mbouzada@gmail.com>, 2013-2014
+# Miguel Anxo Bouzada <mbouzada@gmail.com>, 2013-2015
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-01-06 14:50+0100\n"
-"PO-Revision-Date: 2015-01-06 13:50+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-02-26 08:23+0000\n"
+"Last-Translator: Miguel Anxo Bouzada <mbouzada@gmail.com>\n"
 "Language-Team: Galician (http://www.transifex.com/projects/p/openmediavault/language/gl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -381,7 +381,7 @@ msgid "Asynchronous I/O"
 msgstr "E/S asíncrona"
 
 msgid "At reboot"
-msgstr ""
+msgstr "Ao reiniciar"
 
 msgid "Attribute name"
 msgstr "Nome do atributo"
@@ -557,12 +557,12 @@ msgstr "Cancelar"
 msgid ""
 "Cannot unlink the shared folder content because another shared folder also "
 "refers to it"
-msgstr ""
+msgstr "Non é posíbel desligar contido do cartafol compartido xa que noutro cartafol compartido faise referencia a el"
 
 msgid ""
 "Cannot unlink the shared folder content because another shared folder is "
 "referencing a subdirectory"
-msgstr ""
+msgstr "Non é posíbel desligar contido do cartafol compartido xa que noutro cartafol compartido faise referencia a un subdirectorio"
 
 msgid "Canton and Enderbury Islands"
 msgstr "Illas Canton e Enderbury"
@@ -580,7 +580,7 @@ msgid "Central African Republic"
 msgstr "República Centro Africana"
 
 msgid "Certain date"
-msgstr ""
+msgstr "Na data determinada"
 
 msgid "Certificate"
 msgstr "Certificado"
@@ -774,7 +774,7 @@ msgid "Daemon"
 msgstr "Servizo"
 
 msgid "Daily"
-msgstr ""
+msgstr "Cada día"
 
 msgid "Dashboard"
 msgstr "Taboleiro"
@@ -1203,7 +1203,7 @@ msgid "Everyone: read/write"
 msgstr "Todos: lectura/escritura"
 
 msgid "Exactly"
-msgstr ""
+msgstr "Exactamente"
 
 msgid "Execute command"
 msgstr "Executar unha orde"
@@ -1497,7 +1497,7 @@ msgid "Hour"
 msgstr "Hora"
 
 msgid "Hourly"
-msgstr ""
+msgstr "Cada hora"
 
 msgid "Hungary"
 msgstr "Hungría"
@@ -2038,7 +2038,7 @@ msgid "Month"
 msgstr "Mes"
 
 msgid "Monthly"
-msgstr ""
+msgstr "Cada mes"
 
 msgid "Montserrat"
 msgstr "Montserrat"
@@ -2785,7 +2785,7 @@ msgid "Scheduled tests"
 msgstr "Tarefas planificadas"
 
 msgid "Scheduling"
-msgstr ""
+msgstr "Segundo o programado"
 
 msgid "Secondary"
 msgstr "Secundario"
@@ -2797,7 +2797,7 @@ msgid "Seconds"
 msgstr "Segundos"
 
 msgid "Section"
-msgstr ""
+msgstr "Sección"
 
 msgid "Secure"
 msgstr "Seguro"
@@ -3587,7 +3587,7 @@ msgid "Time interval"
 msgstr "Intervalo de tempo"
 
 msgid "Time of execution"
-msgstr ""
+msgstr "Hora de execución"
 
 msgid "Time server"
 msgstr "Servidor de hora"
@@ -3881,7 +3881,7 @@ msgid "Wednesday"
 msgstr "Mércores"
 
 msgid "Weekly"
-msgstr ""
+msgstr "Cada semana"
 
 msgid "Welcome message"
 msgstr "Mensaxe de benvida"
@@ -3919,7 +3919,7 @@ msgid "Write/Execute"
 msgstr "Escribir/executar"
 
 msgid "Yearly"
-msgstr ""
+msgstr "Cada ano"
 
 msgid "Yemen"
 msgstr "Iemen"
