--- a/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
@@ -4,14 +4,14 @@
 # 
 # Translators:
 # Ádám Balajti <balajtiadam@gmail.com>, 2012
-# Grawens <szabolcs.szanyi@gmail.com>, 2014
+# Grawens <szabolcs.szanyi@gmail.com>, 2014-2015
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-01-06 14:50+0100\n"
-"PO-Revision-Date: 2015-01-06 13:50+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2015-02-23 07:30+0000\n"
+"Last-Translator: Grawens <szabolcs.szanyi@gmail.com>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/projects/p/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1496,7 +1496,7 @@ msgid "Hour"
 msgstr "Óra"
 
 msgid "Hourly"
-msgstr ""
+msgstr "Óránkénti"
 
 msgid "Hungary"
 msgstr "Magyarország"
@@ -2037,7 +2037,7 @@ msgid "Month"
 msgstr "Hónap"
 
 msgid "Monthly"
-msgstr ""
+msgstr "Havi"
 
 msgid "Montserrat"
 msgstr "Montserrat"
@@ -2784,7 +2784,7 @@ msgid "Scheduled tests"
 msgstr "Ütemezett tesztek"
 
 msgid "Scheduling"
-msgstr ""
+msgstr "Ütemezés"
 
 msgid "Secondary"
 msgstr "Másodlagos"
@@ -2796,7 +2796,7 @@ msgid "Seconds"
 msgstr "Másodperc"
 
 msgid "Section"
-msgstr ""
+msgstr "Rész"
 
 msgid "Secure"
 msgstr "Biztonságos"
@@ -3880,7 +3880,7 @@ msgid "Wednesday"
 msgstr "Szerda"
 
 msgid "Weekly"
-msgstr ""
+msgstr "Heti"
 
 msgid "Welcome message"
 msgstr "Üdvözlő üzenet"
@@ -3918,7 +3918,7 @@ msgid "Write/Execute"
 msgstr "Írás/Végrehajtás"
 
 msgid "Yearly"
-msgstr ""
+msgstr "Évi"
 
 msgid "Yemen"
 msgstr "Jemen"
