--- a/deb/openmediavault/usr/share/openmediavault/locale/pt_PT/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/pt_PT/openmediavault.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-01-06 14:50+0100\n"
-"PO-Revision-Date: 2015-01-29 19:59+0000\n"
+"PO-Revision-Date: 2015-02-28 11:55+0000\n"
 "Last-Translator: Nelson Rosado <nelsontrosado@gmail.com>\n"
 "Language-Team: Portuguese (Portugal) (http://www.transifex.com/projects/p/openmediavault/language/pt_PT/)\n"
 "MIME-Version: 1.0\n"
@@ -579,7 +579,7 @@ msgid "Central African Republic"
 msgstr "Republica da Africa Central"
 
 msgid "Certain date"
-msgstr ""
+msgstr "Data epecifica"
 
 msgid "Certificate"
 msgstr "Certificado"
@@ -773,7 +773,7 @@ msgid "Daemon"
 msgstr "Daemon"
 
 msgid "Daily"
-msgstr ""
+msgstr "Diariamente"
 
 msgid "Dashboard"
 msgstr "Dashboard"
@@ -1116,7 +1116,7 @@ msgid "Enable permission inheritance"
 msgstr "Ativar permissão de herança"
 
 msgid "Enable public key authentication"
-msgstr ""
+msgstr "Ative chave pública de autenticação "
 
 msgid "Enable recycle bin"
 msgstr "Ativar reciclagem"
@@ -1202,7 +1202,7 @@ msgid "Everyone: read/write"
 msgstr "Todos: lêem/escrevem "
 
 msgid "Exactly"
-msgstr ""
+msgstr "Exactamente"
 
 msgid "Execute command"
 msgstr "Executar comando"
@@ -1496,7 +1496,7 @@ msgid "Hour"
 msgstr "Hora"
 
 msgid "Hourly"
-msgstr ""
+msgstr "Por hora"
 
 msgid "Hungary"
 msgstr "Hungria"
@@ -2037,7 +2037,7 @@ msgid "Month"
 msgstr "Mês"
 
 msgid "Monthly"
-msgstr ""
+msgstr "Mensalmente"
 
 msgid "Montserrat"
 msgstr "Montserrat"
@@ -2496,7 +2496,7 @@ msgid "Public"
 msgstr "Publico"
 
 msgid "Public key authentication"
-msgstr ""
+msgstr "Chave pública de autenticação"
 
 msgid "Puerto Rico"
 msgstr "Porto Rico"
@@ -2730,7 +2730,7 @@ msgid "SSH"
 msgstr "SSH"
 
 msgid "SSH public key"
-msgstr ""
+msgstr "Chave pública SSH"
 
 msgid "SSL/TLS"
 msgstr "SSL/TLS"
@@ -2784,7 +2784,7 @@ msgid "Scheduled tests"
 msgstr "Testes agendados"
 
 msgid "Scheduling"
-msgstr ""
+msgstr "Agendamento"
 
 msgid "Secondary"
 msgstr "Secundário"
@@ -2796,7 +2796,7 @@ msgid "Seconds"
 msgstr "Segundos"
 
 msgid "Section"
-msgstr ""
+msgstr "Secção"
 
 msgid "Secure"
 msgstr "Seguro"
@@ -3586,7 +3586,7 @@ msgid "Time interval"
 msgstr "Intervalo de tempo"
 
 msgid "Time of execution"
-msgstr ""
+msgstr "Tempo de execução"
 
 msgid "Time server"
 msgstr "Servidor de tempo"
@@ -3880,7 +3880,7 @@ msgid "Wednesday"
 msgstr "Quarta-feira"
 
 msgid "Weekly"
-msgstr ""
+msgstr "Semanalmente"
 
 msgid "Welcome message"
 msgstr "Mensagem de boas vindas"
@@ -3918,7 +3918,7 @@ msgid "Write/Execute"
 msgstr "Escrever/Executar"
 
 msgid "Yearly"
-msgstr ""
+msgstr "Anualmente"
 
 msgid "Yemen"
 msgstr "Iêmen"
