--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -4,6 +4,13 @@ openmediavault (2.0) stable; urgency=low
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 09 Feb 2015 09:50:29 +0100
 
+openmediavault (1.14) stable; urgency=low
+
+  * Update locales.
+  * Fix various ExtJS issues.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 25 Feb 2015 13:18:23 +0100
+
 openmediavault (1.13) stable; urgency=low
 
   * Update locales.
