--- a/deb/openmediavault-shairport/debian/changelog
+++ b/deb/openmediavault-shairport/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault-shairport (2.0) stable; urgency=low
+
+  * Update locales.
+  * Use shairport-sync now.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 08 Mar 2015 11:56:56 +0100
+
 openmediavault-shairport (1.2) stable; urgency=low
 
   * Update locales.
