--- a/deb/openmediavault-shairport/usr/share/openmediavault/locale/cs_CZ/openmediavault-shairport.po
+++ b/deb/openmediavault-shairport/usr/share/openmediavault/locale/cs_CZ/openmediavault-shairport.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+# Pavel Borecki <pavel.borecki@gmail.com>, 2014-2015
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-06-21 18:13+0200\n"
-"PO-Revision-Date: 2014-06-23 16:18+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2015-02-04 16:40+0000\n"
+"Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/projects/p/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,22 +19,22 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 
 msgid "A password is required to stream audio."
-msgstr ""
+msgstr "Pro vysílání zvukového proudu je třeba heslo."
 
 msgid "Authentication"
-msgstr ""
+msgstr "Ověřování"
 
 msgid "Enable"
-msgstr ""
+msgstr "Zapnout"
 
 msgid "General settings"
-msgstr ""
+msgstr "Obecná nastavení"
 
 msgid "Password"
-msgstr ""
+msgstr "Heslo"
 
 msgid "Settings"
-msgstr ""
+msgstr "Nastavení"
 
 msgid "Shairport"
 msgstr ""
