--- a/deb/openmediavault-shairport/usr/share/openmediavault/locale/ru_RU/openmediavault-shairport.po
+++ b/deb/openmediavault-shairport/usr/share/openmediavault/locale/ru_RU/openmediavault-shairport.po
@@ -3,13 +3,15 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+# Alexander Savchenko, 2014
+# артур Мудрых <arturmon82@gmail.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-06-21 18:13+0200\n"
-"PO-Revision-Date: 2014-06-23 16:18+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2015-03-04 20:20+0000\n"
+"Last-Translator: Alexander Savchenko\n"
 "Language-Team: Russian (Russia) (http://www.transifex.com/projects/p/openmediavault/language/ru_RU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,22 +20,22 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 msgid "A password is required to stream audio."
-msgstr ""
+msgstr "Требуется пароль для потоковой передачи аудио."
 
 msgid "Authentication"
-msgstr ""
+msgstr "Аутентификация"
 
 msgid "Enable"
-msgstr ""
+msgstr "Включить"
 
 msgid "General settings"
-msgstr ""
+msgstr "Общие настройки"
 
 msgid "Password"
-msgstr ""
+msgstr "Пароль"
 
 msgid "Settings"
-msgstr ""
+msgstr "Настройки"
 
 msgid "Shairport"
-msgstr ""
+msgstr "Shairport"
